--- a/index.html
+++ b/index.html
@@ -422,6 +422,96 @@
             pointer-events: none;
         }
 
+        /* File Upload Styling */
+        .file-upload-label {
+            display: inline-block;
+            background: rgba(255, 255, 255, 0.2);
+            padding: 12px 24px;
+            border-radius: 50px;
+            cursor: pointer;
+            border: 2px dashed rgba(255, 255, 255, 0.5);
+            transition: all 0.3s;
+            margin-bottom: 1rem;
+            width: 100%;
+        }
+
+        .file-upload-label:hover {
+            background: rgba(255, 255, 255, 0.3);
+            border-color: white;
+        }
+
+        #photo-upload {
+            display: none;
+        }
+
+        /* Preview Grid */
+        .preview-grid {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 10px;
+            justify-content: center;
+            margin-top: 10px;
+            max-width: 100%;
+        }
+
+        .preview-item {
+            position: relative;
+            width: 80px;
+            height: 80px;
+            border-radius: 10px;
+            overflow: hidden;
+            border: 2px solid rgba(255, 255, 255, 0.3);
+        }
+
+        .preview-item img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+
+        .remove-btn {
+            position: absolute;
+            top: 2px;
+            right: 2px;
+            background: red;
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 20px;
+            height: 20px;
+            font-size: 12px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        /* Couple Animation */
+        .couple-icon {
+            position: fixed;
+            font-size: 2rem;
+            opacity: 0.3;
+            animation: floatCouple linear infinite;
+            z-index: 1;
+            pointer-events: none;
+        }
+
+        @keyframes floatCouple {
+            0% {
+                transform: translateY(110vh) translateX(-20px);
+                opacity: 0;
+            }
+
+            20% {
+                opacity: 0.4;
+            }
+
+            100% {
+                transform: translateY(-10vh) translateX(20px);
+                opacity: 0;
+            }
+        }
+
         footer {
             padding: 2rem;
             text-align: center;
@@ -438,6 +528,7 @@
     <!-- Background Elements -->
     <div id="particles"></div>
     <div id="floating-hearts-container"></div>
+    <div id="couple-container"></div>
     <canvas id="confetti-canvas"></canvas>
 
     <!-- Step 1: Name Input -->
@@ -459,9 +550,14 @@
 
             <div style="text-align: left; width: 100%;">
                 <label style="display: block; margin-bottom: 0.5rem; font-weight: 600;">Our Memories (Max 10):</label>
-                <input type="file" id="photo-upload" multiple accept="image/*" onchange="handleFileSelect(event)"
-                    style="width: 100%; font-size: 1rem;">
-                <p id="file-count" style="font-size: 0.9rem; margin-top: 5px; opacity: 0.8;"></p>
+
+                <label for="photo-upload" class="file-upload-label">
+                    📸 Choose Memories
+                </label>
+                <input type="file" id="photo-upload" multiple accept="image/*" onchange="handleFileSelect(event)">
+
+                <div id="preview-container" class="preview-grid"></div>
+                <p id="file-count" style="font-size: 0.9rem; margin-top: 5px; opacity: 0.8; text-align: center;"></p>
             </div>
 
             <button onclick="saveDetails()">Continue</button>
@@ -558,22 +654,59 @@
         window.onload = function () {
             createParticles();
             createFloatingHearts();
+            createCoupleParticles();
         };
 
         // --- Logic ---
-        function handleFileSelect(event) {
-            const files = event.target.files;
-            const countDisplay = document.getElementById('file-count');
+        function createCoupleParticles() {
+            const container = document.getElementById('couple-container');
+            const icons = ['💑', '👩‍❤️‍💋‍👨', '💏', '🧸', '💕', '💍'];
 
-            if (files.length > 10) {
-                alert("Please select a maximum of 10 photos!");
-                event.target.value = ""; // Clear selection
-                uploadedPhotos = [];
-                countDisplay.textContent = "";
+            setInterval(() => {
+                const el = document.createElement('div');
+                el.classList.add('couple-icon');
+                el.innerText = icons[Math.floor(Math.random() * icons.length)];
+                el.style.left = Math.random() * 95 + 'vw';
+                el.style.animationDuration = Math.random() * 10 + 10 + 's';
+                el.style.fontSize = Math.random() * 1.5 + 1.5 + 'rem';
+                container.appendChild(el);
+                setTimeout(() => el.remove(), 20000);
+            }, 2000);
+        }
+
+        function handleFileSelect(event) {
+            const files = Array.from(event.target.files);
+
+            if (uploadedPhotos.length + files.length > 10) {
+                alert("You can only have a maximum of 10 photos!");
                 return;
             }
 
-            uploadedPhotos = Array.from(files);
+            uploadedPhotos = [...uploadedPhotos, ...files];
+            updatePreview();
+        }
+
+        function removePhoto(index) {
+            uploadedPhotos.splice(index, 1);
+            updatePreview();
+        }
+
+        function updatePreview() {
+            const container = document.getElementById('preview-container');
+            const countDisplay = document.getElementById('file-count');
+            container.innerHTML = "";
+
+            uploadedPhotos.forEach((file, index) => {
+                const url = URL.createObjectURL(file);
+                const div = document.createElement('div');
+                div.className = 'preview-item';
+                div.innerHTML = `
+                    <img src="${url}">
+                    <button class="remove-btn" onclick="removePhoto(${index})">×</button>
+                `;
+                container.appendChild(div);
+            });
+
             countDisplay.textContent = `${uploadedPhotos.length} photo(s) selected`;
         }
 
